@@ -152,15 +152,4 @@ array.
 </equation>
 </para>
                        -->
-
-<!--programlisting language="C++"><![CDATA[
-#include <qpid/messaging/Connection.h>
-#include <qpid/messaging/Message.h>
-#include <qpid/messaging/Receiver.h>
-#include <qpid/messaging/Sender.h>
-#include <qpid/messaging/Session.h>
-
-#include <iostream>]]>
-</programlisting-->
-
 </preface>
