@@ -16,7 +16,7 @@
 
 Name:           publican
 Version:        3.2.0
-Release:        3%{?dist}.t4
+Release:        3%{?dist}.t5
 Summary:        Common files and scripts for publishing with DocBook XML
 # For a breakdown of the licensing, refer to LICENSE
 License:        (GPLv2+ or Artistic) and CC0
