@@ -2,6 +2,7 @@
 - Fix empty images dir causing packaging fail. BZ #996349
 - Fix draft background being in front. BZ #996361
 - Fix Titles that are ulinks are incorrectly positioned. BZ #995095
+- Fix Syntax Highlighting not working where Language and Module names differ. BZ #995932
 
 3.2.0 Thu Aug 8 2013
 - Add spaces to web-spec.xsl to work around newer libxml2 eating white space in spec files  BZ #982424
